<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <EditText
                android:id="@+id/editTextTitle"
                style="@style/List.Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_input_title"
                android:inputType="textCapSentences|textMultiLine"
                android:textAppearance="@style/TextAppearance.Primary"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/editTextDescription"
                style="@style/List.Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_input_description"
                android:inputType="textCapSentences|textMultiLine"
                android:textAppearance="@style/TextAppearance.Primary"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/textViewAddress"
                style="@style/List.Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Primary"
                tools:ignore="RtlHardcoded"
                tools:lines="2"
                tools:text="@tools:sample/lorem/random" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDelete"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/button_delete"
                android:textColor="?colorOnSecondary"
                android:visibility="gone"
                app:backgroundTint="?colorSecondary"
                tools:visibility="visible" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>